<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
    <modelVersion>4.0.0</modelVersion>
    <groupId>com.wlf</groupId>
    <artifactId>SeriousContentManager</artifactId>
    <version>0.1.2-SNAPSHOT</version>
    <name>${project.artifactId}::${project.version}</name>
    <inceptionYear>2025</inceptionYear>
    <scm>
        <developerConnection>scm:git:https://github.com/Wolf-64/seriouscontentmanager.git</developerConnection>
      <tag>HEAD</tag>
  </scm>

    <properties>
        <app.version>${project.version}</app.version>
        <app.name>Serious Content Manager</app.name>

        <project.mainClass>com.wlf.app.App</project.mainClass>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>

        <version.javafx>25.0.1</version.javafx>
        <version.lombok>1.18.42</version.lombok>
        <version.controlsfx>11.2.2</version.controlsfx>
        <version.sqlite>3.51.0.0</version.sqlite>
        <version.ikonli>12.4.0</version.ikonli>
        <project.build.sourceEncoding>utf-8</project.build.sourceEncoding>
        <version.jackson>2.19.2</version.jackson>
        <version.atlantafx>2.1.0</version.atlantafx>
        <version.maven-scm-plugin>2.0.1</version.maven-scm-plugin>
        <version.maven-install-plugin>2.4</version.maven-install-plugin>
        <version.versions-maven-plugin>2.14.2</version.versions-maven-plugin>
        <version.properties-maven-plugin>1.2.1</version.properties-maven-plugin>
        <version.maven-dependency-plugin>3.8.1</version.maven-dependency-plugin>
        <version.jgit>7.2.0.202503040940-r</version.jgit>
        <version.logger>2.25.2</version.logger>
        <version.commons-cli>1.5.0.redhat-00001</version.commons-cli>
        <version.junit>4.13.2</version.junit>
        <maven-release-plugin.version>3.1.1</maven-release-plugin.version>
    </properties>
    <dependencies>
        <dependency>
            <groupId>org.openjfx</groupId>
            <artifactId>javafx-controls</artifactId>
            <version>${version.javafx}</version>
        </dependency>
        <dependency>
            <groupId>org.openjfx</groupId>
            <artifactId>javafx-web</artifactId>
            <version>${version.javafx}</version>
        </dependency>
        <dependency>
            <groupId>org.openjfx</groupId>
            <artifactId>javafx-fxml</artifactId>
            <version>${version.javafx}</version>
        </dependency>
        <dependency>
            <groupId>org.controlsfx</groupId>
            <artifactId>controlsfx</artifactId>
            <version>${version.controlsfx}</version>
        </dependency>
        <dependency>
            <groupId>org.projectlombok</groupId>
            <artifactId>lombok</artifactId>
            <version>${version.lombok}</version>
            <scope>provided</scope>
        </dependency>
        <dependency>
            <groupId>com.fasterxml.jackson.core</groupId>
            <artifactId>jackson-databind</artifactId>
            <version>${version.jackson}</version>
        </dependency>
        <dependency>
            <groupId>com.fasterxml.jackson.datatype</groupId>
            <artifactId>jackson-datatype-jsr310</artifactId>
            <version>${version.jackson}</version>
        </dependency>
        <dependency>
            <groupId>org.xerial</groupId>
            <artifactId>sqlite-jdbc</artifactId>
            <version>${version.sqlite}</version>
        </dependency>
        <dependency>
            <groupId>org.apache.commons</groupId>
            <artifactId>commons-exec</artifactId>
            <version>1.4.0</version>
        </dependency>
        <dependency>
            <groupId>junit</groupId>
            <artifactId>junit</artifactId>
            <version>${version.junit}</version>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>com.fasterxml.jackson.core</groupId>
            <artifactId>jackson-core</artifactId>
            <version>${version.jackson}</version>
        </dependency>
        <dependency>
            <groupId>com.fasterxml.jackson.module</groupId>
            <artifactId>jackson-module-jaxb-annotations</artifactId>
            <version>${version.jackson}</version>
        </dependency>
        <dependency>
            <groupId>com.fasterxml.jackson.core</groupId>
            <artifactId>jackson-annotations</artifactId>
            <version>${version.jackson}</version>
        </dependency>
        <dependency>
            <groupId>org.kordamp.ikonli</groupId>
            <artifactId>ikonli-core</artifactId>
            <version>${version.ikonli}</version>
        </dependency>
        <dependency>
            <groupId>org.kordamp.ikonli</groupId>
            <artifactId>ikonli-javafx</artifactId>
            <version>${version.ikonli}</version>
        </dependency>
        <dependency>
            <groupId>org.kordamp.ikonli</groupId>
            <artifactId>ikonli-fontawesome6-pack</artifactId>
            <version>${version.ikonli}</version>
        </dependency>
        <dependency>
            <groupId>io.github.mkpaz</groupId>
            <artifactId>atlantafx-base</artifactId>
            <version>${version.atlantafx}</version>
        </dependency>
        <dependency>
            <groupId>org.apache.logging.log4j</groupId>
            <artifactId>log4j-api</artifactId>
            <version>${version.logger}</version>
        </dependency>
        <dependency>
            <groupId>org.apache.logging.log4j</groupId>
            <artifactId>log4j-core</artifactId>
            <version>${version.logger}</version>
        </dependency>
        <dependency>
            <groupId>org.apache.logging.log4j</groupId>
            <artifactId>log4j-slf4j2-impl</artifactId>
            <version>${version.logger}</version>
        </dependency>
        <dependency>
            <groupId>commons-io</groupId>
            <artifactId>commons-io</artifactId>
            <version>2.20.0</version>
        </dependency>
        <dependency>
            <groupId>org.eclipse.persistence</groupId>
            <artifactId>org.eclipse.persistence.jpa</artifactId>
            <version>4.0.8</version>
        </dependency>
        <dependency>
            <groupId>org.eclipse.persistence</groupId>
            <artifactId>org.eclipse.persistence.core</artifactId>
            <version>4.0.8</version>
        </dependency>
        <dependency>
            <groupId>org.mapstruct</groupId>
            <artifactId>mapstruct</artifactId>
            <version>1.6.3</version>
            <scope>provided</scope>
        </dependency>
        <dependency>
            <groupId>jakarta.enterprise</groupId>
            <artifactId>jakarta.enterprise.cdi-api</artifactId>
            <version>4.1.0</version>
        </dependency>
        <dependency>
            <groupId>jakarta.transaction</groupId>
            <artifactId>jakarta.transaction-api</artifactId>
            <version>2.0.1</version>
        </dependency>
    </dependencies>
    <build>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-release-plugin</artifactId>
                <version>${maven-release-plugin.version}</version>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>3.14.1</version>
                <configuration>
                    <annotationProcessorPaths>
                        <path>
                            <groupId>org.projectlombok</groupId>
                            <artifactId>lombok</artifactId>
                            <version>${version.lombok}</version>
                        </path>
                        <path>
                            <groupId>org.mapstruct</groupId>
                            <artifactId>mapstruct-processor</artifactId>
                            <version>1.6.3</version>
                        </path>
                    </annotationProcessorPaths>
                    <release>25</release>
                    <enablePreview>true</enablePreview>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.codehaus.mojo</groupId>
                <artifactId>properties-maven-plugin</artifactId>
                <version>${version.properties-maven-plugin}</version>
                <executions>
                    <execution>
                        <id>generate-version-file</id>
                        <phase>generate-resources</phase>
                        <goals>
                            <goal>write-project-properties</goal>
                        </goals>
                        <configuration>
                            <outputFile>${project.build.outputDirectory}/meta.properties</outputFile>
                        </configuration>
                    </execution>
                </executions>
            </plugin>
            <plugin>
                <groupId>org.openjfx</groupId>
                <artifactId>javafx-maven-plugin</artifactId>
                <version>0.0.8</version>
                <configuration>
                    <compress>2</compress>
                    <noHeaderFiles>true</noHeaderFiles>
                    <stripDebug>true</stripDebug>
                    <noManPages>true</noManPages>
                    <launcher>${app.name}</launcher>
                    <mainClass>seriouscontentmanager/${project.mainClass}</mainClass>
                    <jlinkImageName>SeriousContentManager</jlinkImageName>
                    <jlinkZipName>SeriousContentManager</jlinkZipName>
                    <options>
                        <option>--add-reads=seriouscontentmanager=ALL-UNNAMED</option>
                        <option>--add-opens=seriouscontentmanager/com.wlf.app.main.data=ALL-UNNAMED</option>
                        <option>--enable-native-access=javafx.web</option>
                        <option>--enable-native-access=org.xerial.sqlitejdbc</option>
                        <option>--enable-native-access=javafx.graphics</option>
                        <option>--include-locales=en</option>
                        <option>--enable-preview</option>
                    </options>
                </configuration>
                <executions>
                    <execution>
                        <!-- Default configuration for running -->
                        <!-- Usage: mvn clean javafx:run -->
                        <id>default-cli</id>
                        <configuration>
                            <mainClass>${project.mainClass}</mainClass>
                            <launcher>${app.name}</launcher>
                            <jlinkZipName>SeriousContentManager</jlinkZipName>
                            <jlinkImageName>SeriousContentManager</jlinkImageName>
                            <noManPages>true</noManPages>
                            <stripDebug>true</stripDebug>
                            <noHeaderFiles>true</noHeaderFiles>
                            <options>
                                <option>--add-reads=seriouscontentmanager=ALL-UNNAMED</option>
                                <option>--add-opens=seriouscontentmanager/com.wlf.app.main.data=ALL-UNNAMED</option>
                                <option>--enable-native-access=javafx.web</option>
                                <option>--enable-native-access=org.xerial.sqlitejdbc</option>
                                <option>--enable-native-access=javafx.graphics</option>
                                <option>--enable-preview</option>
                            </options>
                        </configuration>
                    </execution>
                    <execution>
                        <!-- Configuration for manual attach debugging -->
                        <!-- Usage: mvn clean javafx:run@debug -->
                        <id>debug</id>
                        <configuration>
                            <options>
                                <option>-agentlib:jdwp=transport=dt_socket,server=y,suspend=y,address=localhost:5050
                                </option>
                                <option>--add-reads=seriouscontentmanager=ALL-UNNAMED</option>
                                <option>--add-opens=seriouscontentmanager/com.wlf.app.main.data=ALL-UNNAMED</option>
                                <option>--enable-native-access=javafx.web</option>
                                <option>--enable-native-access=org.xerial.sqlitejdbc</option>
                                <option>--enable-native-access=javafx.graphics</option>
                                <option>--enable-preview</option>
                            </options>
                            <mainClass>${project.mainClass}</mainClass>
                        </configuration>
                    </execution>
                    <execution>
                        <!-- Configuration for automatic IDE debugging -->
                        <id>ide-debug</id>
                        <configuration>
                            <options>
                                <option>-agentlib:jdwp=transport=dt_socket,server=n,address=${jpda.address}</option>
                                <option>--add-reads=seriouscontentmanager=ALL-UNNAMED</option>
                                <option>--add-opens=seriouscontentmanager/com.wlf.app.main.data=ALL-UNNAMED</option>
                                <option>--enable-native-access=javafx.web</option>
                                <option>--enable-native-access=org.xerial.sqlitejdbc</option>
                                <option>--enable-native-access=javafx.graphics</option>
                                <option>--enable-preview</option>
                            </options>
                            <mainClass>${project.mainClass}</mainClass>
                        </configuration>
                    </execution>
                </executions>
            </plugin>
        </plugins>
    </build>
</project>
